@@ -1,3 +1,6 @@
+2008-09-05  Jeremy Cribb <jcribb@email.unc.edu>
+	* stderr.m: added.  couldn't find a stderr function, it's easy enough to make one, and makes the code (and intent) easier to read.
+
 2008-07-09  Jeremy Cribb <jcribb@email.unc.edu>
 	* mavg.m: added.  simple function that computes moving averages via convolution.
 
